--- a/src/css/React/Content.css
+++ b/src/css/React/Content.css
@@ -18,3 +18,63 @@
     align-content: center;
     overflow: hidden;
 }
+
+.preview {
+    z-index: 1;
+    position: fixed;
+    width: 50%;
+    height: 90%;
+    top: 5%;
+    left: 25%;
+
+    background-color: white;
+    border: 2px solid #CCCBCC;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.preview-header {
+    background-color: #F4F3F3;
+    padding: 10px 10px 10px 25px;
+}
+
+.preview-title {
+    font-size: 22px;   
+}
+
+.exit-button { 
+    position: absolute;
+    width: 5%;
+    left: 95%;
+    top: 8px;
+    border: none;
+    background-color: #F4F3F3;
+}
+
+#popup-template-button {
+    border: 1px solid #B6472A;
+
+    position: absolute;
+    width: 20%;
+    height: 35px;
+    top: 25px;
+    left: 70%;
+}
+
+.preview-img-container {
+    padding: 25px;
+}
+
+.preview-img-container > img{
+    width: 100%;
+    height: 100%;
+}
+
+.preview-divider {
+    position: relative;
+    border: 1px solid #CCCBCC;
+    width: 820px;
+    left: -25px;
+    top: 17px;
+}
