--- a/src/css/React/EditorToolbar.css
+++ b/src/css/React/EditorToolbar.css
@@ -14,6 +14,37 @@
     height: 40px;
 }
 
+.toolbar-options-right {
+    position: relative;
+    top: -22.5px;
+    right: 80px;
+    float: right;
+    margin-right: 0px;
+}
+
+#toolbar-download {
+    display: grid;
+    grid-template-columns: 20px 20px;
+    grid-column-gap: 10px;
+    align-content: center;
+}
+
+#toolbar-download:hover {
+    color: black;
+}
+
+.toolbar-download-icon {
+    font-size: 16px;
+    float: left;
+    padding: 0px;
+    margin: 0px;
+}
+
+.toolbar-download-text {
+    float: right;
+    margin: 0px;
+    padding: 0px;
+}
 
 .toolbar-content {
     background-color: #F4F3F3;
