--- a/src/css/React/InfographicEditor.css
+++ b/src/css/React/InfographicEditor.css
@@ -2,6 +2,20 @@
     width: 100%;
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto;
     overflow: hidden;
 } 
+
+.upper-container {
+    grid-column: 1 / span 2;
+}
+
+.lower-container {
+    height: 700px;
+    overflow: auto;
+    background-color: #ececec;
+}
+
+.editor {
+    background-color: #ececec;
+}
