Relative positioning moved from individual menu to chart editor container.

--- a/src/css/React/Editors/ChartEditor.css
+++ b/src/css/React/Editors/ChartEditor.css
@@ -21,3 +21,9 @@
     display: grid;
     grid-template-columns: auto;
 }
+
+.editor-content {
+    position: relative;
+    top: -40px;
+    left: -10px;
+}
