--- a/src/css/React/Content.css
+++ b/src/css/React/Content.css
@@ -13,10 +13,9 @@
 }
 
 .item {
-    border: 2px solid black;
-    border-radius: 10px;
     align-content: center;
     overflow: hidden;
+    box-shadow: 0px 0px 10px #a3a3a3;
 }
 
 .preview {
