--- a/src/css/React/EditorToolbar.css
+++ b/src/css/React/EditorToolbar.css
@@ -117,6 +117,15 @@
     background-color: #F4F3F3;
 }
 
+.insert-button:hover {
+    background-color: #e4e4e4;
+    cursor: pointer;
+}
+
+.insert-button:active {
+    background-color: #e7e7e7;
+}
+
 .insert-icon {
     font-size: 24px;
     position: relative;
@@ -129,7 +138,10 @@
 
 #insert-bkg-button {
     width: 100px;
-    height: 80px;
+    height: 75px;
+    position: relative;
+    top: 1px;
+    padding: 5px;
 }
 
 .edit-container {
