--- a/src/css/React/Editors/Insert/Chart.css
+++ b/src/css/React/Editors/Insert/Chart.css
@@ -1,8 +1,8 @@
 .editor-insert-chart-container {
     display: grid;
     grid-template-columns: max-content max-content;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
     margin: 30px;
 
     align-content: center;
@@ -11,13 +11,14 @@
 .insert-chart-button {
     padding: 20px;
     font-size: 18px;
-    background-color: #ECECEC;
+    background-color: #ffffff;
     border: none;
     width: 150px;
     height: 150px;
 
     position: relative;
     left:50%;
+    box-shadow: 0px 0px 10px #a3a3a3;
 }
 
 .insert-chart-button:hover {
