--- a/src/css/React/Editors/BarChartInputFields.css
+++ b/src/css/React/Editors/BarChartInputFields.css
@@ -14,6 +14,15 @@
 .remove-row-icon{
     font-size: 25px;
     color: #B6472A;
+    cursor: pointer;
+}
+
+.remove-row-icon:hover {
+    color: #9e3c24;
+}
+
+.remove-row-icon:active {
+    color: #af4328;
 }
 
 .add-row-icon {
@@ -23,6 +32,15 @@
     font-size: 20px;
     grid-column: 4 / span 1;
     color: #B6472A;
+    cursor: pointer;
+}
+
+.add-row-icon:hover {
+    color: #9e3c24;
+}
+
+.add-row-icon:active {
+    color: #af4328;
 }
 
 .bar-input-text {
