--- a/src/css/Quill/FontSize.css
+++ b/src/css/Quill/FontSize.css
@@ -72,7 +72,23 @@
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="custom-size"]::before, 
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="custom-size"]::before {
     content: attr(data-value);
+    font-size: 14px;
 }
+
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value^="1"]::before,
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value^="2"]::before,
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value^="3"]::before,
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value^="4"]::before,
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value^="5"]::before,
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value^="6"]::before,
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value^="7"]::before,
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value^="8"]::before,
+.ql-snow .ql-picker.ql-size .ql-picker-label[data-value^="9"]::before
+{
+    content: attr(data-value);
+    font-size: 16px;
+}
+
 
 /*.ql-size-10 {
     font-size: 10px;
