--- a/src/css/React/InfographicEditor.css
+++ b/src/css/React/InfographicEditor.css
@@ -1,17 +1,20 @@
 .editor-container {
     width: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: auto 550px;
-    grid-template-rows: auto auto;
+    grid-template-rows: 137px auto;
+    grid-row-gap: 0px;
     overflow: hidden;
 } 
 
 .upper-container {
     grid-column: 1 / span 2;
+    height: 100%;
 }
 
 .lower-container {
-    height: 700px;
+    height: 100%;
     overflow: auto;
     background-color: #ececec;
 }
@@ -20,13 +23,12 @@
     background-color: white;
 
     position: relative;
-    top: 54px;
-    left: -2px;
+    height: 100%; 
 }
 
 .editor-menu {
     position: relative;
-    top: -54px;
+    top: -0px;
     left: 2px;
     padding: 20px;
 }
@@ -35,7 +37,6 @@
     position: absolute;
     border-left: 2px solid #CCCBCC;
     height: 100%;
-    top: -54px;
 }
 
 .editor-close-button {
