--- a/src/css/React/Editors/Insert/Image.css
+++ b/src/css/React/Editors/Insert/Image.css
@@ -19,3 +19,24 @@
     padding: 10px;
     border: 2px solid #B6472A;
 }
+
+img {
+    width: 150px;
+    height: 150px;
+}
+
+#image-library {
+    padding: 60px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.image-entry {
+    flex: 0 0 auto;
+    width: 170px;
+    padding: 10px;
+}
+
+#remove-image {
+    float: right;
+}
