use-template button width changed from 50% tp 125px

--- a/src/css/React/ContentElement.css
+++ b/src/css/React/ContentElement.css
@@ -69,7 +69,7 @@
     border: 2px solid #B6472A;
     background-color: white;
     color: #b6472a;
-    width: 50%;
+    width: 125px;
     height: 35px;
     position: relative;
     left: 25%;
