Center alignment of use-template buttons updated

--- a/src/css/React/ContentElement.css
+++ b/src/css/React/ContentElement.css
@@ -72,7 +72,8 @@
     width: 125px;
     height: 35px;
     position: relative;
-    left: 25%;
+    left: 50%;
+    transform: translateX(-50%);
     top: -12px;
 }
 
