--- a/src/css/React/Content.css
+++ b/src/css/React/Content.css
@@ -77,3 +77,33 @@
     left: -25px;
     top: 17px;
 }
+
+@media only screen and (max-width: 1300px) {
+    .content {
+        padding: 100px 200px 200px 200px;
+        display: grid;
+        grid-template-columns: minmax(200px, 250px) minmax(200px, 250px) minmax(200px, 250px);
+        grid-auto-rows: 415px;
+        grid-gap: 50px 100px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .content {
+        padding: 100px 200px 200px 200px;
+        display: grid;
+        grid-template-columns: minmax(200px, 250px) minmax(200px, 250px);
+        grid-auto-rows: 415px;
+        grid-gap: 50px 100px;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .content {
+        padding: 100px 200px 200px 200px;
+        display: grid;
+        grid-template-columns: minmax(200px, 250px);
+        grid-auto-rows: 415px;
+        grid-gap: 50px 100px;
+    }
+}
