--- a/src/css/React/Content.css
+++ b/src/css/React/Content.css
@@ -1,11 +1,14 @@
 .content {
     position: absolute;
-    width: 100%;
+    width: max-content;
     height: 100%;
     background-color: #ECECEC;
     overflow-y: auto;
+    left: 50%;
+    transform: translateX(-50%);
 
-    padding: 100px 200px 200px 200px;
+
+    padding: 100px 0 200px 0;
     display: grid;
     grid-template-columns: minmax(200px, 250px) minmax(200px, 250px) minmax(200px, 250px) minmax(200px, 250px);
     grid-auto-rows: 415px;
@@ -80,7 +83,6 @@
 
 @media only screen and (max-width: 1300px) {
     .content {
-        padding: 100px 200px 200px 200px;
         display: grid;
         grid-template-columns: minmax(200px, 250px) minmax(200px, 250px) minmax(200px, 250px);
         grid-auto-rows: 415px;
@@ -90,7 +92,6 @@
 
 @media only screen and (max-width: 1000px) {
     .content {
-        padding: 100px 200px 200px 200px;
         display: grid;
         grid-template-columns: minmax(200px, 250px) minmax(200px, 250px);
         grid-auto-rows: 415px;
@@ -100,7 +101,6 @@
 
 @media only screen and (max-width: 700px) {
     .content {
-        padding: 100px 200px 200px 200px;
         display: grid;
         grid-template-columns: minmax(200px, 250px);
         grid-auto-rows: 415px;
