--- a/src/css/React/Content.css
+++ b/src/css/React/Content.css
@@ -8,7 +8,7 @@
     transform: translateX(-50%);
 
 
-    padding: 100px 0 200px 0;
+    padding: 100px 10px 200px 10px;
     display: grid;
     grid-template-columns: minmax(200px, 250px) minmax(200px, 250px) minmax(200px, 250px) minmax(200px, 250px);
     grid-auto-rows: 415px;
