--- a/src/css/React/Content.css
+++ b/src/css/React/Content.css
@@ -58,7 +58,7 @@
     border: 1px solid #B6472A;
 
     position: absolute;
-    width: 20%;
+    width: 145px;
     height: 35px;
     top: 25px;
     left: 70%;
