--- a/src/css/React/Content.css
+++ b/src/css/React/Content.css
@@ -27,7 +27,8 @@
     width: 800px;
     height: 90%;
     top: 5%;
-    left: 25%;
+    left: 50%;
+    transform: translateX(-50%);
 
     background-color: white;
     border: 2px solid #CCCBCC;
