--- a/src/css/React/Content.css
+++ b/src/css/React/Content.css
@@ -100,11 +100,32 @@
     }
 }
 
+@media only screen and (max-width: 900px) {
+    .preview {
+        width: 600px;
+    }
+}
+
 @media only screen and (max-width: 700px) {
     .content {
         display: grid;
         grid-template-columns: minmax(200px, 250px);
         grid-auto-rows: 415px;
         grid-gap: 50px 100px;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .preview {
+        width: 400px;
+    }
+
+    .exit-button {
+        top: 3px;
+        left: 92%;
+    }
+
+    #popup-template-button {
+        left: 75%;
     }
 }
