Background color and cursor changed when #upload-image-label is hovered over

--- a/src/css/React/Editors/Insert/Image.css
+++ b/src/css/React/Editors/Insert/Image.css
@@ -26,6 +26,11 @@
     transform: translateX(-50%);
 }
 
+#upload-image-label:hover {
+    background-color: #9b3c25;
+    cursor: pointer;
+}
+
 #upload-image-icon {
     font-size: 22px;
     position: relative;
