--- a/src/css/React/Editors/Insert/Image.css
+++ b/src/css/React/Editors/Insert/Image.css
@@ -58,6 +58,9 @@ img {
     flex: 0 0 auto;
     width: 170px;
     padding: 10px;
+
+    background-color: #ececec;
+    box-shadow: 0px 0px 5px #a3a3a3;
 }
 
 .remove-image {
