Display changed from flex to grid

--- a/src/css/React/Editors/Insert/Image.css
+++ b/src/css/React/Editors/Insert/Image.css
@@ -50,8 +50,9 @@ img {
 
 #image-library {
     padding: 60px;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 30px;
 }
 
 .image-entry {
