--- a/src/css/React/EditorToolbar.css
+++ b/src/css/React/EditorToolbar.css
@@ -21,6 +21,8 @@
 }
 
 #toolbar-download {
+    position: relative;
+    right: 40px;
     display: grid;
     grid-template-columns: 20px 20px;
     grid-column-gap: 10px;
