Styles updated for card on hover

--- a/src/css/React/Help/HelpElement.css
+++ b/src/css/React/Help/HelpElement.css
@@ -37,3 +37,8 @@
 .help-element-children-container {
    overflow-wrap: break-word;
 }
+
+.helper-card:hover {
+    background-color: rgb(56, 56, 56); 
+    cursor: pointer;
+}
