--- a/src/css/React/Help/HelpElement.css
+++ b/src/css/React/Help/HelpElement.css
@@ -11,9 +11,29 @@
     padding: 5px;
 }
 
+.help-element h2 {
+    color: white;
+    padding: 0px 15px 10px 15px;
+}
+
 .help-element p {
     color: white;
     padding: 0px 15px 15px 15px;
+}
+
+.help-element span {
+    color: white;
+    padding: 0px 15px 0px 015px;
+}
+
+.help-element ol {
+    color: white;
+    padding-bottom: 15px;
+    padding-right: 15px;
+}
+
+.help-element li {
+    padding-top: 10px;
 }
 
 .help-element-header {
@@ -35,7 +55,7 @@
 }
 
 .help-element-children-container {
-   overflow-wrap: break-word;
+    overflow-wrap: anywhere;
 }
 
 .helper-card:hover {
