--- a/src/css/React/Editors/WaffleEditor.css
+++ b/src/css/React/Editors/WaffleEditor.css
@@ -1,4 +1,5 @@
-.waffle-icon-size-container, .waffle-icon-padding-container {
+.waffle-icon-size-container, .waffle-icon-padding-container,
+.waffle-width-container {
     display: grid;
     grid-template-columns: auto auto auto;
     align-content: center;
@@ -6,7 +7,8 @@
 }
 
 .waffle-icon-padding-container input[type='range'],
-.waffle-icon-size-container input[type='range'] {
+.waffle-icon-size-container input[type='range'],
+.waffle-width-container input[type='range'] {
     position: relative;
     top: -5px;
 }
@@ -16,4 +18,14 @@
     position: relative;
     top: -2px;
     left: 15px;
+}
+
+.waffle-width-container {
+    padding-top: 20px;
+}
+
+.waffle-width-container textarea {
+    position: relative;
+    top: -2px;
+    left: 22px;
 }
