Position changed to fixed. Grid layout for icon-library class added

--- a/src/css/React/Editors/IconLibrary.css
+++ b/src/css/React/Editors/IconLibrary.css
@@ -1,4 +1,11 @@
 .icon-library-container {
+    position: fixed; 
     display: grid;
     grid-template-columns: auto;
+    z-index: 3;
+}
+
+.icon-library {
+    display: grid;
+    grid-template-columns: auto auto auto;
 }
