Styles for .icon-library-button and .icon-library-close added

--- a/src/css/React/Editors/IconLibrary.css
+++ b/src/css/React/Editors/IconLibrary.css
@@ -9,3 +9,11 @@
     display: grid;
     grid-template-columns: auto auto auto;
 }
+
+.icon-library-button {
+    border: none;
+}
+
+.icon-library-close {
+    float: right;
+}
