--- a/src/css/React/Editors/IconLibrary.css
+++ b/src/css/React/Editors/IconLibrary.css
@@ -6,6 +6,8 @@
     z-index: 3;
 
     width: 200px;
+    height: 361px;
+    overflow-y: hidden;
     background-color: #ececec;
     box-shadow: 0px 0px 5px #a3a3a3;
 }
@@ -19,6 +21,7 @@
     grid-template-columns: auto auto auto;
     gap: 10px 10px;
     margin: 10px;
+    overflow-y: scroll;
 }
 
 .icon-library-button {
